# atelier-arland-fixes

./: .gitignore  ADVANCED.md  AGENTS.md  BUILDING.md  CHANGELOG.md  HANDOFF.md  LICENSE  README.md  TECHNICAL.md  TODO.md  build-win32.txt  d3d11.def  dinput8.def  main.cpp  meson.build
.github/workflows/: build.yml
scripts/: embed_font.py
src/: battle_shadow_restore.cpp  battle_shadows.cpp  config.cpp  config.h  crash_log.cpp  crash_log.h  d3d11.rc  d3d11_procs.h  embedded_font.cpp  embedded_font.h  font_hires.cpp  font_hires.h  framerate.cpp  framerate.h  game.cpp  game.h  hook_util.cpp  hook_util.h  launcher_proxy.cpp  log.h  main.cpp  mem.h  menu_fix.cpp  menu_fix.h  menu_internal.h  msimg32.def  msimg32.rc  smaa.cpp  smaa.h  smaa_shader.h  sync_fix.cpp  sync_fix.h  sync_internal.h  util.h  winmm.def
